Update Assign1.java